Fixed Images Not Showing

--- a/less/index.less
+++ b/less/index.less
@@ -163,7 +163,7 @@ table {
 	overflow: hidden;
 }
 .box {
-	background-image: url(https://previews.dropbox.com/p/thumb/AAgQI9JgRHxSXDP-EV__x29nOtSgKstBFO26o-xjx1NeSBKjcUbJ0wr2Qi-_GkX2NMs_fk3w4rk5vJqieMTmm_OLT1n0gwGqDEFj7gygbbcXgIbrjiJUrFOstIaO0A2KGMh55oIjbP4OZRL4GuurtZ-_bf6Ff1b_G4y6pBl_Z_zIIvx_j64bGmNo-i1qhT7HEl0OGIJ5AgZTO2z0lUbw4AsQEfLP-F7qGFplY0Qi8jxUFQ5Wtwn8CYTEK6JFhT7XiulAr2MpDHyINOTqQib0SQUecbgvkP6D2CufXBKt4Qw4lx0nLTsFrmP06xkhrTeNQPhfQaqnE3-omBWtBwtepHUR/p.png?fv_content=true&size_mode=5);
+	background-image: url(/assets/img/ak-47-gun.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 	display: none;
@@ -187,16 +187,16 @@ table {
 		text-align: center;
 	}
 	&:nth-of-type(2) {
-		background-image: url(https://previews.dropbox.com/p/thumb/AAhagGIPzKzD_5YT6PSDeWlTN0gbymyOxYxUbAHXdMubFVafWISFh6boP17YESlcsUbXjSnHDTE9o-Mjzc5wyNqxSbgP3vToeiSulR_JM4UMRMFqx7Z7WxawIjmzcgExH79A1kwlHSNIPm1TTCp85Z8wQ5XH_WFrQu5QVYYBY1_rPCLmCQ8NOX6bpUphLN2WJchhnXJik3CudtY4kcwJMlLLSLCOUSsMT2oTZHJM5Ba1Kbbi-v_8vHybDjYTndSUm5fLefnIHVT9gVLBV6xO_cz3BO1ZGmxhdnd8JqVYimbOmGEmbof53L5ACSWqzgB19_qBBfIpr6GTvlT8KST-6TkA/p.png?fv_content=true&size_mode=5);
+		background-image: url(/assets/img/ak-47-gun.png);
 	}
 	&:nth-of-type(3) {
-		background-image: url(https://previews.dropbox.com/p/thumb/AAgWtMBACZMkSCW4eJ4LgMpX_Yf8WsT7VPsYzBxLqxRh8aiuUyx22smRxZ79G0jVK-goU63cKHwZPqUa2XlwK042L-iHxqNs-JaCfcKE_0g68CIil36HsPH8K_gDgR-l2xFNVlh9TZCWKRL7Aiq9nzj0Q1qbcHd3BZJQQoDecc419y57KuuvdU78lz5UsunLQJKSDpXvu85afE3YVYw0Z2UK5S8EkzXqFJvvLoGci5V6C1rF7b5ZER15dlLBqPKA3LUf1DhQEKTXm7ux6Y8fWqxESzSTBzFFtuqYFKfj3yffcUDeqzSw0LJepGwFIOZFh5YW_W4rjOcgJQdSsESiTc30/p.png?fv_content=true&size_mode=5);
+		background-image: url(/assets/img/ak-47-gun.png);
 	}
 	&:nth-of-type(4) {
-		background-image: url(https://previews.dropbox.com/p/thumb/AAgWtMBACZMkSCW4eJ4LgMpX_Yf8WsT7VPsYzBxLqxRh8aiuUyx22smRxZ79G0jVK-goU63cKHwZPqUa2XlwK042L-iHxqNs-JaCfcKE_0g68CIil36HsPH8K_gDgR-l2xFNVlh9TZCWKRL7Aiq9nzj0Q1qbcHd3BZJQQoDecc419y57KuuvdU78lz5UsunLQJKSDpXvu85afE3YVYw0Z2UK5S8EkzXqFJvvLoGci5V6C1rF7b5ZER15dlLBqPKA3LUf1DhQEKTXm7ux6Y8fWqxESzSTBzFFtuqYFKfj3yffcUDeqzSw0LJepGwFIOZFh5YW_W4rjOcgJQdSsESiTc30/p.png?fv_content=true&size_mode=5);
+		background-image: url(/assets/img/ak-47-gun.png);
 	}
 	&:nth-of-type(5) {
-		background-image: url(https://previews.dropbox.com/p/thumb/AAgWtMBACZMkSCW4eJ4LgMpX_Yf8WsT7VPsYzBxLqxRh8aiuUyx22smRxZ79G0jVK-goU63cKHwZPqUa2XlwK042L-iHxqNs-JaCfcKE_0g68CIil36HsPH8K_gDgR-l2xFNVlh9TZCWKRL7Aiq9nzj0Q1qbcHd3BZJQQoDecc419y57KuuvdU78lz5UsunLQJKSDpXvu85afE3YVYw0Z2UK5S8EkzXqFJvvLoGci5V6C1rF7b5ZER15dlLBqPKA3LUf1DhQEKTXm7ux6Y8fWqxESzSTBzFFtuqYFKfj3yffcUDeqzSw0LJepGwFIOZFh5YW_W4rjOcgJQdSsESiTc30/p.png?fv_content=true&size_mode=5);
+		background-image: url(/assets/img/ak-47-gun.png);
 	}
 }
 .weapon-name-title {
